Fix wrong colors

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -60,7 +60,7 @@ body {
 }
 
 .header__title {
-  background: #0aa6e1;
+  background: #0aa1da;
   padding-bottom: 3rem;
   padding-top: 3.5rem;
 }
@@ -102,7 +102,7 @@ body {
 
 /* In the end I changed the global h2 into this. */
 .information__heading {
-  color: #0aa6e1;
+  color: #0aa1da;
   font-weight: 300;
   margin-top: 0;
 }
@@ -185,7 +185,7 @@ body {
 }
 
 .progress__value {
-  background: #0aa6e1;
+  background: #0aa1da;
   display: block;
   height: 100%;
   margin: 0;
@@ -251,7 +251,7 @@ body {
 }
 
 .timeline__list {
-  border-left: 1px solid #0aa6e1;
+  border-left: 1px solid #0aa1da;
   list-style-type: none;
   padding-left: 40px;
   width: 100%;
@@ -268,10 +268,10 @@ body {
 
 /* The pretty blue bullet */
 .timeline__item::before {
-  background: #0aa6e1;
+  background: #0aa1da;
   border-radius: 50%;
   /* Same color as background, but part transparent */
-  box-shadow: 0 0 0 .5rem rgba(10,166,225,.4);
+  box-shadow: 0 0 0 .5rem rgba(10,161,218,.4);
   content: '';
   display: block;
   height: 1rem;
